# purrsh3ll

./: .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  QTermWidget.pyi  README.md  install.sh  install_full.sh  install_purr.sh  main.py
appdata/: app_config.json  chat_presets.json  dynamic_variables.json  imports_map.json  manual.md  ob_panel_state.json  psnmap_help.md  psnotes.txt  session.json  snippets.json  term_start.zsh  term_start_old.zsh  themes.json  themes_valid.json  user_guide.md  venv_list.json
core/: app_logger.py  constants.py  controller.py  file_types.py  theme_manager.py
file_loaders/: ansi_c_file.py  asm_file.py  audio_file.py  base_file_loader.py  chunked_file_loader.py  cpp_file.py  csharp_file.py  csv_file.py  game_file.py  go_file.py  htaccess_file.py  html_file.py  invalid_noextension_file.py  java_file.py  javascript_file.py  json_file.py  lua_file.py  md_file.py  noextension_file.py  pdf_file.py  perl_file.py  php_file.py  powershell_file.py  psc2_file.py  psnmap_file.py  psnmap_script.py  purr_file.py  python_file.py  ruby_file.py  sh_file.py  sql_file.py  text_file.py  unsupported_file.py  video_file.py  viewer_widgets.py  visualbasic_file.py  winshell_file.py  xml_file.py
gui/: filters.py  main_window.py  ui_factory.py
notes/: network_pentesting_notatki.md  rag_test_dataset_synthetic_knowledge_base.md
scripts/: extract_wheel.sh
usermodules/: FIRST_STEPS.md
usermodules/testfolder/syntax_autodetect/: .env  Dockerfile  Gemfile  Makefile  Vagrantfile  config.yaml  index.ts  main.rs  nginx.conf  pyproject.toml  styles.css
(+198 files in other folders)
